...
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginfields"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loginfields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:inputType="textPassword" />

    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="Log In"
            android:background="@drawable/roundedbutton"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountButton"
            android:text="Create Account"
            android:background="@android:color/transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="error"
...
