...
        android:layout_marginHorizontal="50dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentButton"
        android:text="Student"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/managerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="30dp"
...
